frontend/editor.css
/* ... */
main > preamble span.saved-icon::after,
.overlay-button span.saved-icon::after {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/checkmark-outline.svg");
    filter: var(--image-filters);
}

#saveall-container .only-on-hover {
    display: none;
}
#saveall-container:hover .only-on-hover {
    display: inline;
}

/* body:not(.code_differs) > main > preamble #saveall-container {
    display: none;
} */

/* CELL */

pluto-cell {
    display: block;
    /* CodeMirror line height (defined by their JS somehow) + 1px border top + 1px border bottom */
    min-height: calc(23px + 1px + 1px);
    margin-top: var(--pluto-cell-spacing);
    position: relative;
}

pluto-output {
    display: block;
    padding-left: 10px;
    padding-right: 10px;
    align-items: baseline;
    overflow-x: auto;
    background-color: var(--pluto-output-bg-color);
}

.scroll_y {
    overflow-y: auto;
    max-height: 80vh;
}

pluto-output:focus {
    outline: none;
}

pluto-output:not(.rich_output) {
    display: flex;
    flex-wrap: wrap;
    padding-top: 3px;
    padding-bottom: 3px;
}

pluto-output > assignee {
    font-family: var(--julia-mono-font-stack);
    font-size: 0.75rem;
    font-variant-ligatures: none;
}

pluto-output > assignee::after {
    content: "\a0=\a0";
    opacity: 0.6;
}

pluto-output > assignee:empty {
    display: none;
}

.errored pluto-output > assignee {
    display: none;
}

pluto-output > div {
    flex-shrink: 0;
    overflow-y: hidden;
}

pluto-output div.raw-html-wrapper {
    display: contents;
}

pluto-output:not(.rich_output) > div > pre {
    display: flex;
}

.bonds_disabled:where(.offer_binder, .offer_local) bond {
    opacity: 0.6;
    filter: grayscale(1);
}

/* as embedded display: */

pluto-display {
    display: contents;
}
pluto-display > div {
    display: contents;
}

/* isolated cell view */
.isolated-cell > pluto-output {
    padding: 0;
}
.hidden-cell {
    display: none;
}

/* DISABLED CELLS */

pluto-cell.depends_on_disabled_cells > pluto-output,
pluto-cell.running_disabled > pluto-output,
pluto-cell.depends_on_disabled_cells > pluto-trafficlight,
pluto-cell.running_disabled > pluto-trafficlight,
pluto-cell.depends_on_disabled_cells > pluto-input .cm-editor,
pluto-cell.running_disabled > pluto-input .cm-editor,
pluto-cell.depends_on_disabled_cells > pluto-logs-container,
pluto-cell.running_disabled > pluto-logs-container {
    opacity: 0.3;
}

pluto-cell.running_disabled > pluto-input .cm-editor,
pluto-cell.running_disabled > pluto-output {
    background-color: var(--disabled-cell-bg-color);
}

/* SKIP AS SCRIPT CELLS */
pluto-cell.skip_as_script .skip_as_script_marker,
pluto-cell.depends_on_skipped_cells .depends_on_skipped_marker {
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    cursor: help;
    z-index: 20;
    right: -3px;
    width: 4px;
    border-radius: 0px 4px 4px 0px;
    background-color: var(--skip-as-script-background-color);
}

pluto-cell.depends_on_skipped_cells .depends_on_skipped_marker {
    background-color: var(--depends-on-skip-as-script-background-color);
}

pluto-cell.skip_as_script pluto-input .cm-editor,
pluto-cell.depends_on_skipped_cells pluto-input .cm-editor {
    border-bottom-right-radius: 0px;
}

/* SELECTION */

pluto-cell.selected {
    background: var(--selected-cell-bg-color);
    border-radius: 0 3px 3px 0;
}

pluto-cell.selected > pluto-input > div.cm-editor,
pluto-cell.selected > pluto-output {
    opacity: 0.7;
}

main {
    cursor: vertical-text;
}
pluto-cell {
    cursor: auto;
}

/* SCROLLBAR FIREFOX */

pluto-output > div {
    scrollbar-width: thin;
    scrollbar-color: transparent transparent;
}

pluto-cell:hover > pluto-output > div {
    scrollbar-color: var(--hover-scrollbar-color-1) var(--hover-scrollbar-color-2);
}

/* SCROLLBAR CHROME */

pluto-output > div::-webkit-scrollbar {
    height: 6px;
    background: transparent;
}

pluto-output > div::-webkit-scrollbar-thumb {
    background: transparent;
}

pluto-cell:hover > pluto-output > div::-webkit-scrollbar {
    background: var(--hover-scrollbar-color-2);
}

pluto-cell:hover > pluto-output > div::-webkit-scrollbar-thumb {
    background: var(--hover-scrollbar-color-1);
}

/* CELL INPUT */

pluto-input .cm-editor {
    z-index: 20;
    border-bottom-right-radius: 4px;
    border: 1px solid var(--normal-cell-color);
    border-left: none;
    transition: border-color 0.15s ease-in-out;

    /* Make sure that scrolling an editor into view gives some breathing room */
    scroll-margin-block: 20vh;
    min-height: 25px;
}
pluto-input:focus-within .cm-editor {
    /* z-index increased by 1 to make sure that the autocomplete window shows above all other editors, see https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Positioning/Understanding_z_index/The_stacking_context */
    z-index: 21;
}

pluto-input .cm-editor .cm-line {
    transition: background-color 0.15s ease-in-out;
}

pluto-input .cm-editor span.cm-highlighted-range,
pluto-input .cm-editor .cm-line.cm-highlighted-line {
    background-color: var(--cm-highlighted);
    border-radius: 3px;
}

pluto-cell:not(.show_input) > pluto-input {
    display: none;
}
pluto-cell.code_folded.show_input > pluto-input:not(:focus-within) {
    opacity: 0.4;
}

pluto-cell.code_differs > pluto-input > .cm-editor {
    border: 1px solid var(--code-differs-cell-color);
    border-left: none;
}

/* UI */

button.floating_back_button,
.overlay-button button,
pluto-cell > button,
pluto-input > button,
pluto-runarea > button,
pluto-shoulder > button,
nav#slide_controls > button {
    position: absolute;
    margin: 0px;
    padding: 1px;
    opacity: 50%;
    border: none;
    background: none;
    cursor: pointer;
    /* color: hsl(204, 86%, 35%); */
    color: var(--ui-button-color);
    font-family: "Segoe UI Emoji", "Roboto Mono", monospace;
    font-size: 0.75rem;
    z-index: 30;
    /* CodeMirror is 2 */
}
/* ... */

